[workspace]
members = [
    "emulator/core",
    "emulator/frontends/common",
    "emulator/frontends/console",
    "emulator/frontends/minifb",
    "emulator/cpus/moa-iz80",
    "tests/harte_tests",
    "tests/rad_tests"
]
exclude = [
    "emulator/frontends/pixels",
    "emulator/frontends/macroquad",
]
default-members = ["emulator/frontends/minifb"]

[profile.release]
debug = true
#overflow-checks = true

