[workspace]
members = [
    "emulator/core",
    "emulator/frontends/common",
    "emulator/frontends/console",
    "emulator/frontends/minifb",
    "tests/harte_tests",
    "tests/rad_tests"
]
exclude = [
    "emulator/frontends/pixels",
    "emulator/frontends/macroquad",
]
default-members = ["emulator/frontends/minifb"]

[profile.dev]
opt-level = 3

[profile.release]
debug = true
#overflow-checks = true

