[package]
name = "rad-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
femtos = "0.1"
moa-core = { path = "../../emulator/core" }
moa-z80 = { path = "../../emulator/cpus/z80" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
flate2 = "1.0"
clap = { version = "3.2.20", features = ["derive"] }
