[package]
name = "moa-z80"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
thiserror = "1.0"
femtos = "0.1"
emulator-hal = { path = "../../libraries/emulator-hal/emulator-hal", features = ["femtos"] }

# TODO the goal is to make these optional, or remove them entirely
moa-core = { path = "../../core", optional = true }
moa-signals = { path = "../../libraries/signals" }

[dev-dependencies]
emulator-hal-memory = { path = "../../libraries/emulator-hal/emulator-hal-memory" }

[features]
moa = ["moa-core"]
