[package]
name = "moa_common"
version = "0.1.0"
edition = "2021"

[features]
tty = ["nix"]
audio = ["cpal"]

[dependencies]
log = "0.4"
femtos = "0.1"
moa_core = { path = "../../core" }
nix = { version = "0.25", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = { version = "0.14", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.14", optional = true, features = ["wasm-bindgen"] }
