[package]
name = "moa_console"
version = "0.1.0"
edition = "2021"
default-run = "moa-computie"

[dependencies]
log = "0.4"
clap = "^4"
simple_logger = "^2"
femtos = { path = "../../libraries/femtos" }

moa_core = { path = "../../core" }
moa_common = { path = "../common", features = ["tty"] }

moa_systems_genesis = { path = "../../systems/genesis" }
moa_systems_computie = { path = "../../systems/computie" }
moa_m68k = { path = "../../cpus/m68k" }
moa_peripherals_generic = { path = "../../peripherals/generic" }
moa_peripherals_motorola = { path = "../../peripherals/motorola" }
