[package]
name = "moa-console"
version = "0.1.0"
edition = "2021"
default-run = "moa-computie"

[dependencies]
log = "0.4"
clap = "^4"
simple_logger = "^2"
femtos = "0.1"

moa-core = { path = "../../core" }
moa-common = { path = "../common", features = ["tty"] }

moa-systems-genesis = { path = "../../systems/genesis" }
moa-systems-computie = { path = "../../systems/computie" }
moa-m68k = { path = "../../cpus/m68k" }
moa-peripherals-generic = { path = "../../peripherals/generic" }
moa-peripherals-motorola = { path = "../../peripherals/motorola" }
