[package]
name = "moa-console"
version = "0.1.0"
edition = "2021"
default-run = "moa-computie"

[dependencies]
log = "0.4"
clap = "=4.4"
simple_logger = "4"
femtos = "0.1"

moa-core = { path = "../../core" }
moa-host = { path = "../../libraries/host" }
moa-common = { path = "../common", features = ["tty"] }

moa-debugger = { path = "../../libraries/debugger" }
moa-systems-genesis = { path = "../../systems/genesis" }
moa-systems-computie = { path = "../../systems/computie" }
moa-m68k = { path = "../../cpus/m68k", features = ["moa"] }
moa-peripherals-generic = { path = "../../peripherals/generic" }
moa-peripherals-motorola = { path = "../../peripherals/motorola" }
