[package]
name = "moa_minifb"
version = "0.1.0"
edition = "2021"
default-run = "moa-genesis"

[dependencies]
log = "0.4"
minifb = "^0.19"
clap = "^4"
simple_logger = "^2"
femtos = { path = "../../libraries/femtos" }

moa_core = { path = "../../core" }
moa_common = { path = "../common", features = ["audio"] }

moa_systems_genesis = { path = "../../systems/genesis" }
moa_systems_computie = { path = "../../systems/computie" }
moa_systems_trs80 = { path = "../../systems/trs80" }
moa_systems_macintosh = { path = "../../systems/macintosh" }
moa_peripherals_yamaha = { path = "../../peripherals/yamaha" }

