[package]
name = "moa-minifb"
version = "0.1.0"
edition = "2021"
default-run = "moa-genesis"

[dependencies]
log = "0.4"
minifb = "^0.19"
clap = "^4"
simple_logger = "^2"
femtos = "0.1"

moa-core = { path = "../../core" }
moa-common = { path = "../common", features = ["audio"] }

moa-systems-genesis = { path = "../../systems/genesis" }
moa-systems-computie = { path = "../../systems/computie" }
moa-systems-trs80 = { path = "../../systems/trs80" }
moa-systems-macintosh = { path = "../../systems/macintosh" }
moa-peripherals-yamaha = { path = "../../peripherals/yamaha" }

