[package]
name = "moa-minifb"
version = "0.1.0"
edition = "2021"
default-run = "moa-genesis"

[dependencies]
log = "0.4"
minifb = "0.25"
clap = "=4.4"
simple_logger = "4"
femtos = "0.1"

moa-core = { path = "../../core" }
moa-host = { path = "../../libraries/host" }
moa-common = { path = "../common", features = ["audio"] }

moa-debugger = { path = "../../libraries/debugger" }
moa-systems-genesis = { path = "../../systems/genesis" }
moa-systems-computie = { path = "../../systems/computie" }
moa-systems-trs80 = { path = "../../systems/trs80" }
moa-systems-macintosh = { path = "../../systems/macintosh" }
moa-peripherals-yamaha = { path = "../../peripherals/yamaha" }

