[package]
name = "moa_pixels"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
pixels = "0.12"
winit = "0.28"
femtos = "0.1"

moa_core = { path = "../../core" }
moa_common = { path = "../common", features = ["audio"] }

moa_systems_genesis = { path = "../../systems/genesis" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
wgpu = { version = "0.15", features = ["webgl"] }
instant = { version = "0.1", features = [ "wasm-bindgen" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9"
pollster = "0.2"
instant = "0.1"

